--- a/Quark/MainWindow.xaml
+++ b/Quark/MainWindow.xaml
@@ -2,24 +2,66 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:mui="http://firstfloorsoftware.com/ModernUI"
+                  xmlns:vm="clr-namespace:Quark.source.MWindow"
+                  xmlns:ie="http://schemas.microsoft.com/xaml/behaviors" 
+                  xmlns:dragDrop="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
                   Title="Quark" 
                   Style="{StaticResource BlankWindow}">
 
+    <mui:ModernWindow.DataContext>
+        <vm:ViewModel/>
+    </mui:ModernWindow.DataContext>
+
     <TabControl Background="{x:Null}" BorderBrush="{x:Null}">
-            <TabItem Header="Задания">
-            <Grid Background="#252526"/>
-            </TabItem>
-            <TabItem Header="Метод">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
+        <TabItem Header="Задания">
+            <ScrollViewer>
+                <Grid Background="#252526"/>
+            </ScrollViewer>
+        </TabItem>
+        <TabItem Header="Метод">
+            <Grid Background="#252526">
+                <RichTextBox>
+                    <FlowDocument>
+                        <Paragraph>
+                            <Run Text=""/>
+                        </Paragraph>
+                    </FlowDocument>
+                </RichTextBox>
+
+            </Grid>
+        </TabItem>
         <TabItem Header="Алгоритм">
-            <Grid Background="#FFE5E5E5"/>
+            <Grid Background="#252526">
+                <RichTextBox>
+                    <FlowDocument>
+                        <Paragraph>
+                            <Run Text=""/>
+                        </Paragraph>
+                    </FlowDocument>
+                </RichTextBox>
+
+            </Grid>
         </TabItem>
         <TabItem Header="Блок схема">
             <Grid Background="#FFE5E5E5"/>
         </TabItem>
         <TabItem Header="Код">
-            <Grid Background="#FFE5E5E5"/>
+            <TabItem.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Импорт" Command="{Binding ImportCodeCommand}"/>
+                </ContextMenu>
+            </TabItem.ContextMenu>
+            <Grid x:Name="CodeGrid" Background="#252526" dragDrop:DragDrop.IsDropTarget="True"
+            dragDrop:DragDrop.DropHandler="{Binding}">
+                <RichTextBox x:Name="CodeBox">
+                    <FlowDocument>
+                        <Paragraph>
+                            <Run Text=""/>
+                        </Paragraph>
+                    </FlowDocument>
+                </RichTextBox>
+
+            </Grid>
         </TabItem>
         <TabItem Header="Тесты">
             <Grid Background="#FFE5E5E5"/>
