--- a/Quark/MainWindow.xaml
+++ b/Quark/MainWindow.xaml
@@ -9,160 +9,160 @@
                   xmlns:editing="clr-namespace:ICSharpCode.AvalonEdit.Editing;assembly=ICSharpCode.AvalonEdit"
                   xmlns:rendering="clr-namespace:ICSharpCode.AvalonEdit.Rendering;assembly=ICSharpCode.AvalonEdit"
                   Title="{Binding UserNameTitle, Mode=OneWay}" 
-                  Style="{StaticResource BlankWindow}" BorderBrush="Purple">
+                  Style="{StaticResource BlankWindow}" BorderBrush="Purple" Height="420" Width="800" MaxHeight="450" MinHeight="420">
 
     <mui:ModernWindow.DataContext>
         <vm:ViewModel/>
     </mui:ModernWindow.DataContext>
 
 
-
-    <TabControl Background="{x:Null}" BorderBrush="{x:Null}" x:Name="MenuTab">
-        <TabControl.Resources>
-            <Style TargetType="TabItem">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="TabItem">
-                            <Grid Name="Panel" Margin="2,0,0,0" Width="80">
-                                <ContentPresenter x:Name="ContentSite"
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="346*"/>
+            <RowDefinition Height="23*"/>
+        </Grid.RowDefinitions>
+        <TabControl Background="{x:Null}" BorderBrush="{x:Null}" x:Name="MenuTab" Grid.Column="0" Grid.Row="0">
+            <TabControl.Resources>
+                <Style TargetType="TabItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TabItem">
+                                <Grid Name="Panel" Margin="2,0,0,0" Width="80">
+                                    <ContentPresenter x:Name="ContentSite"
                                         VerticalAlignment="Center"
                                         HorizontalAlignment="Center"
                                         ContentSource="Header"
                                         Margin="10,2"/>
-                            </Grid>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter TargetName="Panel" Property="Background" Value="#dbd7d2" />
-                                    <Setter Property="Foreground" Value="Black"/>
-                                </Trigger>
-                                <Trigger Property="IsSelected" Value="False">
-                                    <Setter TargetName="Panel" Property="Background" Value="#1D1D1E"/>
-                                    <Setter Property="Foreground" Value="#E5E5E5"/>
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </TabControl.Resources>
-        <TabItem Header="Задания" BorderBrush="{x:Null}">
-            <ScrollViewer>
+                                </Grid>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="Panel" Property="Background" Value="#dbd7d2" />
+                                        <Setter Property="Foreground" Value="Black"/>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="False">
+                                        <Setter TargetName="Panel" Property="Background" Value="#1D1D1E"/>
+                                        <Setter Property="Foreground" Value="#E5E5E5"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TabControl.Resources>
+            <TabItem Header="Задания" BorderBrush="{x:Null}">
+                <ScrollViewer>
+                    <Grid Background="#252526"/>
+                </ScrollViewer>
+            </TabItem>
+            <TabItem Header="Метод">
                 <Grid Background="#252526">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
+                    <RichTextBox>
+                        <FlowDocument>
+                            <Paragraph>
+                                <Run Text=""/>
+                            </Paragraph>
+                        </FlowDocument>
+                    </RichTextBox>
+
                 </Grid>
-            </ScrollViewer>
-        </TabItem>
-        <TabItem Header="Метод">
-            <Grid Background="#252526">
-                <RichTextBox>
-                    <FlowDocument>
-                        <Paragraph>
-                            <Run Text=""/>
-                        </Paragraph>
-                    </FlowDocument>
-                </RichTextBox>
+            </TabItem>
+            <TabItem Header="Алгоритм">
+                <Grid Background="#252526">
+                    <RichTextBox>
+                        <FlowDocument>
+                            <Paragraph>
+                                <Run Text=""/>
+                            </Paragraph>
+                        </FlowDocument>
+                    </RichTextBox>
 
-            </Grid>
-        </TabItem>
-        <TabItem Header="Алгоритм">
-            <Grid Background="#252526">
-                <RichTextBox>
-                    <FlowDocument>
-                        <Paragraph>
-                            <Run Text=""/>
-                        </Paragraph>
-                    </FlowDocument>
-                </RichTextBox>
-
-            </Grid>
-        </TabItem>
-        <TabItem Header="Блок схема">
-            <Grid Background="#252526"/>
-        </TabItem>
-        <TabItem Header="Код">
-            <TabItem.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Импорт" Command="{Binding ImportCodeCommand}"/>
-                </ContextMenu>
-            </TabItem.ContextMenu>
-            <Grid x:Name="CodeGrid" Background="#252526" dragDrop:DragDrop.IsDropTarget="True"
+                </Grid>
+            </TabItem>
+            <TabItem Header="Блок схема">
+                <Grid Background="#252526"/>
+            </TabItem>
+            <TabItem Header="Код">
+                <TabItem.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Импорт" Command="{Binding ImportCodeCommand}"/>
+                    </ContextMenu>
+                </TabItem.ContextMenu>
+                <Grid x:Name="CodeGrid" Background="#252526" dragDrop:DragDrop.IsDropTarget="True"
             dragDrop:DragDrop.DropHandler="{Binding}">
-                <avalonEdit:TextEditor
+                    <avalonEdit:TextEditor
                     Name="CodeEdit"
                     Background="#404040"
                     Foreground="White"
                     LineNumbersForeground="White"
                     SyntaxHighlighting="C++">
-                    <avalonEdit:TextEditor.ContextMenu>
-                        <ContextMenu>
-                            <MenuItem Command="Cut" Header="Cut">
-                </MenuItem>
-                <MenuItem Command="Copy" Header="Copy">
-                </MenuItem>
-                <MenuItem Command="Paste" Header="Paste">
-                </MenuItem>
-                <MenuItem Command="Delete" Header="Delete">
-                </MenuItem>
+                        <avalonEdit:TextEditor.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Command="Cut" Header="Cut">
+                                </MenuItem>
+                                <MenuItem Command="Copy" Header="Copy">
+                                </MenuItem>
+                                <MenuItem Command="Paste" Header="Paste">
+                                </MenuItem>
+                                <MenuItem Command="Delete" Header="Delete">
+                                </MenuItem>
 
-                <Separator />
+                                <Separator />
 
-                <MenuItem Command="Undo" Header="Undo">
-                </MenuItem>
-                <MenuItem Command="Redo" Header="Redo">
-                </MenuItem>
-                </ContextMenu>
-                </avalonEdit:TextEditor.ContextMenu>
+                                <MenuItem Command="Undo" Header="Undo">
+                                </MenuItem>
+                                <MenuItem Command="Redo" Header="Redo">
+                                </MenuItem>
+                            </ContextMenu>
+                        </avalonEdit:TextEditor.ContextMenu>
 
-                <avalonEdit:TextEditor.Template>
-                    <ControlTemplate TargetType="{x:Type avalonEdit:TextEditor}">
-                        <ControlTemplate.Resources>
-                            <Style TargetType="{x:Type rendering:TextView}">
-                                <Setter Property="NonPrintableCharacterBrush" Value="#3F8080FF" />
-                                <Setter Property="LinkTextForegroundBrush" Value="#FF4040FF" />
-                                <Setter Property="LinkTextBackgroundBrush" Value="White" />
-                            </Style>
+                        <avalonEdit:TextEditor.Template>
+                            <ControlTemplate TargetType="{x:Type avalonEdit:TextEditor}">
+                                <ControlTemplate.Resources>
+                                    <Style TargetType="{x:Type rendering:TextView}">
+                                        <Setter Property="NonPrintableCharacterBrush" Value="#3F8080FF" />
+                                        <Setter Property="LinkTextForegroundBrush" Value="#FF4040FF" />
+                                        <Setter Property="LinkTextBackgroundBrush" Value="White" />
+                                    </Style>
 
-                            <Style TargetType="{x:Type editing:TextArea}">
-                                <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-                                <Setter Property="SelectionBrush" Value="#1ba1e2" />
-                                <Setter Property="SelectionBorder">
-                                    <Setter.Value>
-                                        <Pen Brush="#1ba1e2" Thickness="1" />
-                                    </Setter.Value>
-                                </Setter>
-                                <Setter Property="SelectionCornerRadius" Value="0" />
-                                <Setter Property="SelectionForeground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type editing:TextArea}">
-                                            <DockPanel Focusable="False">
-                                                <ItemsControl
+                                    <Style TargetType="{x:Type editing:TextArea}">
+                                        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                                        <Setter Property="SelectionBrush" Value="#1ba1e2" />
+                                        <Setter Property="SelectionBorder">
+                                            <Setter.Value>
+                                                <Pen Brush="#1ba1e2" Thickness="1" />
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Setter Property="SelectionCornerRadius" Value="0" />
+                                        <Setter Property="SelectionForeground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="{x:Type editing:TextArea}">
+                                                    <DockPanel Focusable="False">
+                                                        <ItemsControl
                                                         DockPanel.Dock="Left"
                                                         Focusable="False"
                                                         ItemsSource="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=LeftMargins}">
-                                                    <ItemsControl.ItemsPanel>
-                                                        <ItemsPanelTemplate>
-                                                            <StackPanel Orientation="Horizontal" />
-                                                        </ItemsPanelTemplate>
-                                                    </ItemsControl.ItemsPanel>
-                                                </ItemsControl>
-                                                <ContentPresenter
+                                                            <ItemsControl.ItemsPanel>
+                                                                <ItemsPanelTemplate>
+                                                                    <StackPanel Orientation="Horizontal" />
+                                                                </ItemsPanelTemplate>
+                                                            </ItemsControl.ItemsPanel>
+                                                        </ItemsControl>
+                                                        <ContentPresenter
                                                         Panel.ZIndex="-1"
                                                         Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextView}"
                                                         Focusable="False" />
-                                            </DockPanel>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </ControlTemplate.Resources>
-                        <Border
+                                                    </DockPanel>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ControlTemplate.Resources>
+                                <Border
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}">
-                            <ScrollViewer
+                                    <ScrollViewer
                                     Name="PART_ScrollViewer"
                                     Padding="{TemplateBinding Padding}"
                                     HorizontalContentAlignment="Left"
@@ -172,25 +172,28 @@
                                     Focusable="False"
                                     HorizontalScrollBarVisibility="Auto"
                                     VerticalScrollBarVisibility="Auto" />
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="WordWrap" Value="True">
-                                <Setter TargetName="PART_ScrollViewer" Property="HorizontalScrollBarVisibility" Value="Disabled" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </avalonEdit:TextEditor.Template>
-                </avalonEdit:TextEditor>
-            </Grid>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="WordWrap" Value="True">
+                                        <Setter TargetName="PART_ScrollViewer" Property="HorizontalScrollBarVisibility" Value="Disabled" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </avalonEdit:TextEditor.Template>
+                    </avalonEdit:TextEditor>
+                </Grid>
 
-        </TabItem>
-        <TabItem Header="Тесты">
-            <Grid Background="#252526"/>
-        </TabItem>
-        <TabItem Header="Отправка">
-            <Grid Background="#252526"/>
-        </TabItem>
+            </TabItem>
+            <TabItem Header="Тесты">
+                <Grid Background="#252526"/>
+            </TabItem>
+            <TabItem Header="Отправка">
+                <Grid Background="#252526"/>
+            </TabItem>
 
-    </TabControl>
-
+        </TabControl>
+        <StatusBar Grid.Row="1" Margin="3,0">
+            <TextBlock Text="{Binding StatusText}" />
+        </StatusBar>
+    </Grid>
 </mui:ModernWindow>
