--- a/Quark/LoginWindow.xaml
+++ b/Quark/LoginWindow.xaml
@@ -1,4 +1,4 @@
-﻿<mui:ModernWindow x:Class="Quark.LoginWindow"
+﻿<mui:ModernWindow x:Name="LoginPage" x:Class="Quark.LoginWindow"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,27 +10,23 @@
                   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                   mc:Ignorable="d"
                   Title="Login"
-                  Style="{StaticResource BlankWindow}" Height="456.333" Width="481.833" ResizeMode="NoResize">
+                  Style="{StaticResource BlankWindow}" Height="516.333" Width="481.833" ResizeMode="NoResize">
     <mui:ModernWindow.DataContext>
         <local:ViewModel/>
     </mui:ModernWindow.DataContext>
 
     <mui:ModernWindow.Resources>
         <converter:LoginWindowConverter x:Key="LoginWindowConverter"/>
+
     </mui:ModernWindow.Resources>
-    <mui:ModernWindow.BorderBrush>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="Black" Offset="0.419"/>
-            <GradientStop Color="#FFD30F0F" Offset="1"/>
-        </LinearGradientBrush>
-    </mui:ModernWindow.BorderBrush>
+
 
     <mui:ModernWindow.InputBindings>
         <KeyBinding Command="{Binding LoginCommand}" Key="Enter">
             <KeyBinding.CommandParameter>
                 <MultiBinding Converter="{StaticResource LoginWindowConverter}">
-                    <Binding ElementName="GroupsCombo" Path="SelectedItem"/>
-                    <Binding ElementName="StudentsCombo" Path="SelectedItem"/>
+                    <Binding ElementName="GroupsCombo"/>
+                    <Binding ElementName="StudentsCombo"/>
                     <Binding ElementName="PasswordField" />
                     <Binding ElementName="RememberBox" Path="IsChecked"/>
                     <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type mui:ModernWindow}}" />
@@ -38,26 +34,29 @@
             </KeyBinding.CommandParameter>
         </KeyBinding>
     </mui:ModernWindow.InputBindings>
+
     <Grid>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="129*"/>
             <ColumnDefinition Width="209*"/>
             <ColumnDefinition Width="129*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="174*"/>
-            <RowDefinition Height="47*"/>
-            <RowDefinition Height="12*"/>
-            <RowDefinition Height="47*"/>
-            <RowDefinition Height="11*"/>
-            <RowDefinition Height="42*"/>
-            <RowDefinition Height="11*"/>
-            <RowDefinition Height="29*"/>
-            <RowDefinition Height="11*"/>
-            <RowDefinition Height="43*"/>
+            <RowDefinition Height="209*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="21*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="21*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="16*"/>
+            <RowDefinition Height="28*"/>
+            <RowDefinition Height="15*"/>
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="25*"/>
         </Grid.RowDefinitions>
-        <ComboBox x:Name="GroupsCombo" Grid.Row="1" Grid.Column="1" ItemsSource="{Binding GroupItems}" 
-          materialDesign:HintAssist.Hint="Группа" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="28" Margin="0,7,0,12">
+        <ComboBox x:Name="GroupsCombo" Grid.Column="1" ItemsSource="{Binding GroupItems}" 
+          materialDesign:HintAssist.Hint="Группа" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="28" Grid.Row="1">
             <ie:Interaction.Triggers>
                 <ie:EventTrigger EventName="SelectionChanged">
                     <ie:InvokeCommandAction Command="{Binding GroupsItemsSelectionChanged}"  CommandParameter="{Binding ElementName=GroupsCombo, Path=SelectedItem}"/>
@@ -65,8 +64,8 @@
             </ie:Interaction.Triggers>
         </ComboBox>
         <ComboBox x:Name="StudentsCombo" Grid.Column="1" Grid.Row="3" ItemsSource="{Binding StudentItems}"
-           materialDesign:HintAssist.Hint="ФИО" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="28" Margin="0,10,0,9"/>
-        <PasswordBox x:Name="PasswordField" Grid.Column="1" Grid.Row="5" Password="Password" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+           materialDesign:HintAssist.Hint="ФИО" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="28"/>
+        <PasswordBox x:Name="PasswordField" Grid.Column="1" Grid.Row="5" Password="Password" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" MaxLength="30">
             <ie:Interaction.Triggers>
                 <ie:EventTrigger EventName="GotFocus">
                     <ie:InvokeCommandAction Command="{Binding PasswordField_GotFocus}"  CommandParameter="{Binding ElementName=PasswordField}"/>
@@ -77,7 +76,7 @@
             </ie:Interaction.Triggers>
         </PasswordBox>
 
-        <Button Content="Войти" Grid.Column="1" Grid.Row="9" Command="{Binding LoginCommand}" Height="Auto" Margin="0,6,0,5">
+        <Button Content="Войти" Grid.Column="1" Grid.Row="9" Command="{Binding LoginCommand}" Height="Auto" Margin="0,1,0,0">
             <Button.CommandParameter>
                 <MultiBinding Converter="{StaticResource LoginWindowConverter}">
                     <Binding ElementName="GroupsCombo" Path="SelectedItem"/>
@@ -85,13 +84,14 @@
                     <Binding ElementName="PasswordField" />
                     <Binding ElementName="RememberBox" Path="IsChecked"/>
                     <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type mui:ModernWindow}}" />
+
                 </MultiBinding>
             </Button.CommandParameter>
         </Button>
         <CheckBox x:Name="RememberBox" Content="Запомнить?" Grid.Column="1" Grid.Row="7"/>
-        <materialDesign:Snackbar
-  HorizontalAlignment="Stretch"
-  x:Name="Snackbar" Grid.ColumnSpan="2" Height="0" Margin="0,0,35,5"/>
-        <Image Source="source/Pics/logo.png" Stretch="UniformToFill" Grid.Column="1"/>
+        <Image Source="source/Pics/logo.png" Stretch="UniformToFill" Grid.ColumnSpan="3" Margin="110,0,111,0"/>
+        <materialDesign:Snackbar x:Name="Snackbar" Grid.ColumnSpan="3" MessageQueue="{Binding snackBarMessageQueue}" Grid.Row="10" Height="28" Width="477" Margin="0,0,-1,0"/>
+
+
     </Grid>
 </mui:ModernWindow>
