--- a/Quark/LoginWindow.xaml
+++ b/Quark/LoginWindow.xaml
@@ -1,4 +1,4 @@
-﻿<mui:ModernWindow x:Name="LoginPage" x:Class="Quark.LoginWindow"
+﻿<mui:ModernWindow
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,16 +8,21 @@
                   xmlns:local="clr-namespace:Quark.source.LoginWindow"
                   xmlns:converter="clr-namespace:Quark.source.Converters"
                   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                  xmlns:local1="clr-namespace:Quark" x:Name="LoginPage" x:Class="Quark.LoginWindow"
                   mc:Ignorable="d"
                   Title="Login"
-                  Style="{StaticResource BlankWindow}" Height="550" Width="430" ResizeMode="NoResize">
-    <mui:ModernWindow.DataContext>
-        <local:ViewModel/>
-    </mui:ModernWindow.DataContext>
+                  Height="550" Width="430" ResizeMode="NoResize">
 
     <mui:ModernWindow.Resources>
         <converter:LoginWindowConverter x:Key="LoginWindowConverter"/>
     </mui:ModernWindow.Resources>
+
+    <mui:ModernWindow.Style>
+        <StaticResource ResourceKey="BlankWindow"/>
+    </mui:ModernWindow.Style>
+    <mui:ModernWindow.DataContext>
+        <local:ViewModel/>
+    </mui:ModernWindow.DataContext>
 
     <ie:Interaction.Triggers>
         <ie:EventTrigger EventName="Loaded">
@@ -33,7 +38,7 @@
                     <Binding ElementName="StudentsCombo" Path="SelectedItem"/>
                     <Binding ElementName="PasswordField" />
                     <Binding ElementName="RememberBox" Path="IsChecked"/>
-                    <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type mui:ModernWindow}}" />
+                    <Binding RelativeSource="{RelativeSource AncestorType={x:Type mui:ModernWindow}, Mode=FindAncestor}" />
                 </MultiBinding>
             </KeyBinding.CommandParameter>
         </KeyBinding>
@@ -62,7 +67,7 @@
           materialDesign:HintAssist.Hint="Группа" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="32" Grid.Row="1">
             <ie:Interaction.Triggers>
                 <ie:EventTrigger EventName="SelectionChanged">
-                    <ie:InvokeCommandAction Command="{Binding GroupsItemsSelectionChanged}"  CommandParameter="{Binding ElementName=GroupsCombo, Path=SelectedItem}"/>
+                    <ie:InvokeCommandAction Command="{Binding GroupsItemsSelectionChanged}"  CommandParameter="{Binding SelectedItem, ElementName=GroupsCombo}"/>
                 </ie:EventTrigger>
             </ie:Interaction.Triggers>
         </ComboBox>
@@ -86,12 +91,13 @@
                     <Binding ElementName="StudentsCombo" Path="SelectedItem"/>
                     <Binding ElementName="PasswordField" />
                     <Binding ElementName="RememberBox" Path="IsChecked"/>
-                    <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type mui:ModernWindow}}" />
+                    <Binding RelativeSource="{RelativeSource AncestorType={x:Type mui:ModernWindow}, Mode=FindAncestor}" />
                 </MultiBinding>
             </Button.CommandParameter>
         </Button>
         <CheckBox x:Name="RememberBox" Content="Запомнить?" Grid.Column="1" Grid.Row="7"/>
         <Image Source="source/Pics/logo.png" Stretch="UniformToFill" Grid.ColumnSpan="3" Margin="85,0,86,10"/>
+
 
 
 
